Changelog
=========

1.4 (unreleased)
----------------

- If the subject is empty, do not try to find a matching issue, as all
  issues will match.
  [maurits]


1.3 (2011-05-11)
----------------

- Added FAKE_MANAGER option (default is True) to determine if we
  should fake a Manager role to be sure that a post succeeds.
  [maurits]

- While switching users: if 'email' is not in the properties (say:
  ldap), we can get far too many results; so we do a double check.
  [maurits]


1.2 (2011-05-09)
----------------

- Ignore mails with the email_from_address as From address, as this
  too easily means that a message sent by Poi ends up being added as a
  reply on an issue that we have just created.
  [maurits]


1.1 (2011-05-05)
----------------

- Handle encoded subject lines better.
  [maurits]


1.0 (2011-05-05)
----------------

- Initial release